# vibe-text

./: .gitignore  MARKDOWN_GUIDE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  test-markdown.md  tsconfig.json  vercel.json
.github/workflows/: build.yml
Agent_use/: api-profession-mcp.md  backend-architecture.md  frontend-development-mcp.md  frontend-review.md  fullstack-delivery.md  qa-engineering.md  seo-growth-strategy.md  uiux-product-design-mcp.md  user-journey-test-mcp.md
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Editor.tsx  HtmlPrinter.tsx  MarkdownPreview.tsx  Sidebar.tsx  TopBar.tsx  VibeTextApp.tsx
src/hooks/: useWordCount.ts
src/styles/: index.css
src/utils/: fileOperations.ts  markdownOperations.ts  screenshot.ts
